--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <title>React App</title>
   </head>
   <body>
-    <script src="index.js"></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
